--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cwenzelg/google-apis.git"
+  },
+  "author": "Christian Wenzel",
+  "bugs": {
+    "url": "https://github.com/cwenzelg/google-apis/issues"
   }
 }
